fixed css for sidenav/header

--- a/src/components/atoms/topnav.css
+++ b/src/components/atoms/topnav.css
@@ -1,17 +1,18 @@
 .topnav {
   background-color: #0166cc;
   height: 64px;
-  overflow: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 500%;
 }
 
 .sidenav {
-  height: 100%; /* Full-height: remove this if you want "auto" height */
-  width: 64px; /* Set the width of the sidebar */
-  position: fixed;
-  z-index: 1;
-  top: 0;
+  height: 100%;
+  width: 64px;
+  position: absolute;
+  /* z-index: 1; */
+  /* top: 0; */
   left: 0;
   background-color: #213341;
-  overflow-x: hidden;
-  padding-top: 20px;
 }
