added footer molecule for metrics card- needs styling fix

--- a/src/components/atoms/topnav.css
+++ b/src/components/atoms/topnav.css
@@ -14,3 +14,27 @@
   left: 0;
   background-color: #213341;
 }
+
+.lightbluedot {
+  height: 20px;
+  width: 20px;
+  background-color: #68b2e8;
+  border-radius: 50%;
+  display: inline-block;
+}
+
+.bluedot {
+  height: 20px;
+  width: 20px;
+  background-color: #0166cc;
+  border-radius: 50%;
+  display: inline-block;
+}
+
+.greydot {
+  height: 20px;
+  width: 20px;
+  background-color: #c4c4c4;
+  border-radius: 50%;
+  display: inline-block;
+}
