--- a/src/components/atoms/topnav.css
+++ b/src/components/atoms/topnav.css
@@ -9,7 +9,7 @@
 
 .sidenav {
   width: 64px;
-  height: 100%;
+  height: 2300px !important;
   position: absolute;
   left: 0;
   background-color: #213341;
