--- a/src/components/molecules/metrics.css
+++ b/src/components/molecules/metrics.css
@@ -1,9 +1,8 @@
-/* chart: {
-    spacingBottom: 15,
-    spacingTop: 10,
-    spacingLeft: 10,
-    spacingRight: 10,
-
-    width: null,
-    height: null
-} */
+.rowAlign {
+  align-content: left;
+  text-align: left;
+}
+.ag-theme-material .ag-header-cell-label {
+  align-content: left;
+  text-align: left;
+}
