changed style of grid cells to align left

--- a/src/components/molecules/metrics.css
+++ b/src/components/molecules/metrics.css
@@ -1,4 +1,4 @@
-.rowAlign {
+/* .rowAlign {
   align-content: left;
   text-align: left;
 }
@@ -9,4 +9,4 @@
 
 .ag-header-cell-label {
   justify-content: left;
-}
+} */
