--- a/src/components/molecules/metrics.css
+++ b/src/components/molecules/metrics.css
@@ -1,12 +1,3 @@
-/* .rowAlign {
-  align-content: left;
-  text-align: left;
+.header-black {
+  color: black;
 }
-.ag-theme-material .ag-header-cell-label {
-  align-content: left;
-  text-align: left;
-}
-
-.ag-header-cell-label {
-  justify-content: left;
-} */
